# taskmanager

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
taskmanager/: database.py  main.py  models.py  schema.py
tests/: conftest.py  test_api.py
