[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = "A simple task manager API"
authors = ["Adam Meszaros <adam.meszaros.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
httpx = "^0.28.1"
sqlalchemy = "^2.0.37"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pyright = "^1.1.392.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
